--- a/OnnxDemo/OnnxDemo.csproj
+++ b/OnnxDemo/OnnxDemo.csproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>    
+    <PackageReference Include="Emgu.CV" Version="4.7.0.5276" />    
+    <PackageReference Include="Emgu.CV.runtime.windows" Version="4.7.0.5276" />    
     <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.15.1" />    
     <PackageReference Include="Microsoft.ML.OnnxRuntime.Managed" Version="1.15.1" />
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
